--- a/android/build.gradle
+++ b/android/build.gradle
@@ -46,13 +46,13 @@ android {
     }
 
     defaultConfig {
-        minSdkVersion 19
+        minSdkVersion 26
     }
 
     dependencies {
         testImplementation 'org.jetbrains.kotlin:kotlin-test'
         testImplementation 'org.mockito:mockito-core:5.0.0'
-        implementation 'com.facebook.android:facebook-login:16.2.0'
+        implementation 'com.facebook.android:facebook-android-sdk:latest.release'
     }
 
     testOptions {
